Use spacing in buttons - fix some icon colors in es-components

--- a/packages/components/src/components/buttons/button.css
+++ b/packages/components/src/components/buttons/button.css
@@ -26,7 +26,7 @@
     --border-width: 2px;
     --text-decoration: none;
     --transition-duration: 500ms;
-    --spacing: 14px;
+    --spacing: var(--spacing-2, 16px);
     --align-inner: center;
     --focus: var(--focus-color, var(--color-focus));
 
@@ -34,13 +34,6 @@
     display: inline-block;
     height: var(--height);
     border-radius: var(--border-radius);
-}
-
-:host(:not([disabled]):focus),
-:host(:not([disabled]):focus-within) {
-    outline-offset: 2px;
-    outline-color: var(--focus);
-    outline-style: solid;
 }
 
 /* variants */
@@ -218,10 +211,11 @@ a {
     font: inherit;
     overflow: hidden;
 
+    gap: calc(var(--spacing) * 0.75);
     padding-top: 0;
     padding-bottom: 0;
-    padding-left: var(--spacing);
-    padding-right: var(--spacing);
+    padding-left: calc(var(--spacing) - var(--border-width));
+    padding-right: calc(var(--spacing) - var(--border-width));
     border-radius: var(--border-radius);
     border-width: var(--border-width);
     border-style: var(--border-style);
@@ -235,6 +229,12 @@ a {
     &[disabled] {
         cursor: not-allowed;
     }
+
+    &:not(:disabled):not([disabled]):focus-visible {
+        outline-offset: 2px;
+        outline-color: var(--focus);
+        outline-style: solid;
+    }
 }
 
 :host(.hydrated) button,
@@ -244,16 +244,6 @@ a {
     transition-timing-function: ease;
 }
 
-::slotted([slot='before']) {
-    margin-left: 0;
-    margin-right: var(--spacing);
-}
-
-::slotted([slot='after']) {
-    margin-left: var(--spacing);
-    margin-right: 0;
-}
-
 span {
     display: flex;
     justify-content: var(--align-inner);
@@ -261,7 +251,12 @@ span {
 }
 
 ::slotted(:where(es-icon, es-badge):not([slot]):only-child) {
-    margin-left: calc(0px - var(--spacing));
-    margin-right: calc(0px - var(--spacing));
+    margin-left: calc(0px - calc(var(--spacing) - var(--border-width)));
+    margin-right: calc(0px - calc(var(--spacing) - var(--border-width)));
     width: calc(var(--height) - calc(var(--border-width) * 2));
+}
+
+:host([variant='link'])
+    ::slotted(:where(es-icon, es-badge):not([slot]):only-child) {
+    margin: 0;
 }
